syntax = "proto3";
package activitypb;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";


option go_package = "activitypb";

service Activity {
    rpc StoreRequest(ReqRequest) returns (ReqReply) {}
    rpc GetRequests(google.protobuf.Empty) returns (GetRequestsReply) {}
    rpc UpdateRequest(ReqRequest) returns (google.protobuf.Empty) {}
    rpc StoreResponse(ResRequest) returns (google.protobuf.Empty) {}
    rpc GetResponse(GetResRequest) returns (ResRequest) {}
    rpc GetHostSize(HostSizeRequest) returns (HostSizeReply) {}
}

message ReqRequest {
    int32 reqId = 1;
    string url = 2;
    bytes header = 3;
    bool completed = 4;
}

message ReqReply {
    int32 reqId = 1;
}

message GetRequestsReply {
    repeated ReqRequest requests = 1;
}

message ResRequest {
    string host = 1;
    string url = 2;
    bytes response = 3;
    bytes body = 4;
    google.protobuf.Timestamp expires = 5;
}

message GetResRequest {
    string host = 1;
    string url = 2;
}

message HostSizeRequest {
    string host = 1;
}

message HostSizeReply {
    int64 size = 1;
}